# super-training-collector

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Collector Design V0.1.md  Dashboard_(phase1).md  README.md  install-stc-4-nh.sh  log.txt  run_server.sh  update_collector.sh
app/: Cargo.toml  log.txt
app/benches/: flamegraph_performance.rs
app/src/: adapter.rs  api.rs  bench_utils.rs  hang_types.rs  lib.rs  mock.rs  mock_server.rs  models.rs  performance_tests.rs  push_scheduler.rs  rank_analysis_types.rs
app/src/components/: common.rs  hang_indicator.rs  level1.rs  level2.rs  level3.rs  mod.rs  rank_analysis.rs  stack_view.rs
app/src/flamegraph/: flamegraph_generator.rs  mod.rs  process_data.rs  stack_collector.rs  stack_merger.rs
app/src/hang_detector/: config.rs  detector.rs  jaccard.rs  job_info_client.rs  logger.rs  mod.rs  notifier.rs  runner.rs  scheduler.rs  state.rs
app/src/rank_analyzer/: analyzer.rs  config.rs  mod.rs  state.rs  types.rs
app/tests/: performance_tests.rs
app/tests/common/: mock_server.rs  mod.rs
config/: collector.json  flamegraph.json.bak
debian/: control  postinst  prerm  super-training-collector.service
docs/: Collector Design V0.1.md  DESIGN.md - 南湖调度系统（Nanhu Scheduling System）.md  Dashboard_(phase1).md  ECS_DESIGN_AND_USAGE.md  TEST_COMPLETION_REPORT.md  architecture.mmd  ebpf_upgrade_plan.md  hang_check_in_interval(phase3).md  hang_detection_flow.mmd  hang_detector_review.md  metric_step_(phase2).md  straggler_review.md  项目汇报.md
ecs-server/: Cargo.toml  README.md
ecs-server/src/: handlers.rs  job_info_client.rs  main.rs  state.rs  storage.rs
ecs-server/templates/: collector.html  dashboard.html
frontend/: Cargo.toml
frontend/src/: lib.rs
scripts/: build-deb.sh  deploy.sh  release.sh
server/: Cargo.toml
server/src/: main.rs
style/: main.scss
super-training-monitor-skill/: README.md  SKILL.md
super-training-monitor-skill/evals/: evals.json
super-training-monitor-skill/references/: data_structures.md
super-training-monitor-skill/scripts/: example_usage.py
