[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }

reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
inferno = { version = "0.12", features = ["cli"], optional = true }
futures = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
mockito = "0.28"
serde_json = "1.0"


[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:reqwest", "dep:tokio", "dep:inferno", "dep:futures", "dep:serde_json"]

