[package]
name = "app"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"

# 客户端定时器（用于自动刷新）
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"

reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
inferno = { version = "0.12", features = ["cli"], optional = true }
futures = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", optional = true, features = ["cors"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
mockito = "0.28"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
memory-stats = "1.0"
axum = "0.8"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"


[[bench]]
name = "flamegraph_performance"
harness = false

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:reqwest", "dep:tokio", "dep:inferno", "dep:futures", "dep:serde_json", "dep:rand", "dep:tracing"]
bench = ["dep:rand", "dep:axum", "dep:tower-http", "dep:tokio"]

